--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/sidebar-logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business Dictionary | Admin</title>
+    <title>Listing India | Admin</title>
 
     <!------ Bootstrap css cdn ------>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
